--- a/template/index3/cartoons.html
+++ b/template/index3/cartoons.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <title>cartoons</title>
+  <title>Cartoon</title>
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/cartoons-grid.css">
   <link rel="stylesheet" href="css/cartoons.css">
@@ -49,7 +49,9 @@
           <span class="_text">เมื่อวานก่อน</span>
         </div>
       </div>
-      <img class="post-item-contentpic post-item-contentpic-1" src="images/10710815_601527346625917_7680853728705594621_n.jpg">
+      <div class="post-item-contentpic post-item-contentpic-1 clearfix">
+        <img class="post-item-img" src="images/10710815_601527346625917_7680853728705594621_n.jpg">
+      </div>
       <div class="post-item-likebtn post-item-likebtn-1 clearfix">
         <img class="image" src="images/thumb-up_64.png">
       </div>
@@ -69,7 +71,9 @@
           <span class="_text">2 วันก่อน</span>
         </div>
       </div>
-      <img class="post-item-contentpic post-item-contentpic-2" src="images/10534630_601058643339454_7851416848481355807_n.jpg">
+      <div class="post-item-contentpic post-item-contentpic-2 clearfix">
+        <img class="post-item-img" src="images/10534630_601058643339454_7851416848481355807_n.jpg">
+      </div>
       <div class="post-item-likebtn post-item-likebtn-2 clearfix">
         <img class="image" src="images/thumb-up_64.png">
       </div>
@@ -78,6 +82,28 @@
       </div>
     </div>
   </div>
-  <div class="sidebar"></div>
+  <div class="sidebar clearfix">
+    <div class="adsupnaja clearfix">
+      <h2 class="title">ผู้สนับสนุน      </h2>
+      <a href="#" class="adnaja-item clearfix">
+        <img class="adnaja-img" src="images/ads.gif">
+      </a>
+      <a href="#" class="adnaja-item clearfix">
+        <img class="adnaja-img" src="images/ads.gif">
+      </a>
+    </div>
+  </div>
+  <div class="footer clearfix">
+    <div class="bear clearfix">
+      <img class="image _image" src="images/Sketch216133034.png">
+    </div>
+    <div class="wrapper clearfix">
+      <h3 class="title">คนอะไรเป็นแฟนหมี      </h3>
+      <div class="description">
+        <p>รายละเอียด ...........</p>
+        <p><br></p>
+</div>
+    </div>
+  </div>
 </body>
 </html>
